# guile-minimal-cognition

./: configure.ac  todo.org
src/: Makefile.am  ctrnn.nw  hello-emacsy-paper.aux  paper-wrapper.nw
src/minimal-cognition/: Makefile.am  c-vision-test  c-vision-test.in  ctrnn-appendix.nw  ctrnn.appendix.nw  ctrnn.nw  fode.nw  unified-procedure.nw  vision.nw
support/automake/: guile.am  noweb.am
support/noweb/: boiler-plate.nw  paper-wrapper.nw
support/scheme/: check.scm  float-equality.scm  infix.scm  line-pragma.scm  vector-math.scm
tests/: Makefile.am  print-install.sh.in
